@@ -45,8 +45,6 @@ Profiled execution. [current: no]
 Add <file or directory> to the black list. It should be a base name, not a path. You may set this option multiple times. [current: CVS]
 .IP "--persistent=<y_or_n>"
 Pickle collected data for later comparisons. [current: yes]
-.IP "--cache-size=<size>"
-Set the cache size for astng objects. [current: 500]
 .IP "--load-plugins=<modules>"
 List of plugins (as comma separated values of python modules names) to load, usually to register additional checkers. [current: none]
 
